# reprorusted-std-only

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pmat.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
scripts/: export_corpus.py  validate_stdlib_only.py
src/reprorusted_std_only/: __init__.py
src/reprorusted_std_only/argparse/: __init__.py  basic_example.py
src/reprorusted_std_only/builtins/: __init__.py  abs_example.py
src/reprorusted_std_only/collections/: __init__.py  counter_example.py
src/reprorusted_std_only/concurrency/: __init__.py  threading_example.py
src/reprorusted_std_only/contextlib/: __init__.py  contextmanager_example.py
src/reprorusted_std_only/csv/: __init__.py  reader_example.py
src/reprorusted_std_only/dataclasses/: __init__.py  basic_example.py
src/reprorusted_std_only/datetime/: __init__.py  basic_example.py
src/reprorusted_std_only/enum/: __init__.py  basic_example.py
src/reprorusted_std_only/functools/: __init__.py  reduce_example.py
src/reprorusted_std_only/hashlib_secrets/: __init__.py  hash_example.py
src/reprorusted_std_only/io_files/: __init__.py  stringio_example.py
src/reprorusted_std_only/itertools/: __init__.py  chain_example.py
src/reprorusted_std_only/json/: __init__.py  loads_dumps_example.py
src/reprorusted_std_only/math_stats/: __init__.py  math_example.py
src/reprorusted_std_only/pathlib/: __init__.py  path_ops_example.py
src/reprorusted_std_only/re/: __init__.py  match_example.py
src/reprorusted_std_only/string_text/: __init__.py  string_methods_example.py
src/reprorusted_std_only/struct_binary/: __init__.py  pack_unpack_example.py
src/reprorusted_std_only/typing/: __init__.py  generics_example.py
tests/: conftest.py
tests/unit/: test_argparse.py  test_builtins.py  test_collections.py  test_concurrency.py  test_contextlib.py  test_csv.py  test_dataclasses.py  test_datetime.py  test_enum.py  test_export_corpus.py  test_functools.py  test_hashlib.py  test_io_files.py  test_itertools.py  test_json.py  test_math_stats.py  test_pathlib.py  test_re.py  test_string_text.py  test_struct_binary.py  test_typing.py  test_validate_stdlib.py
