[project]
name = "reprorusted-std-only"
version = "0.1.0"
description = "Standard library Python-to-Rust transpilation corpus - zero third-party dependencies"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "PAIML", email = "info@paiml.com" }]
keywords = ["python", "rust", "transpiler", "stdlib", "depyler", "corpus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
    "ruff>=0.8.0",
    "ty>=0.0.14",
    "bandit>=1.8.0",
    "mutmut>=3.2.0",
    "pdoc>=15.0.0",
    "pyarrow>=22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reprorusted_std_only"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["reprorusted_std_only"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--doctest-modules",
    "--cov=src/reprorusted_std_only",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
markers = ["slow: marks tests as slow"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/reprorusted_std_only"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.ty.environment]
python-version = "3.11"

[tool.mutmut]
paths_to_mutate = "src/reprorusted_std_only/"
tests_dir = "tests/"
runner = "pytest -x -q --no-cov"
